# openemr-on-eks

./: .gitignore  .pre-commit-config.yaml  README.md  kics.config  versions.yaml
console/: go.mod
docs/: AUTOSCALING_GUIDE.md  BACKUP_RESTORE_GUIDE.md  CONSOLE_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_TIMINGS.md  DISASTER_RECOVERY_PYTHON.md  END_TO_END_TESTING_REQUIREMENTS.md  LOGGING_GUIDE.md  MANUAL_RELEASES.md  README.md  (+3 more)
scripts/openemr_dr/: __init__.py  __main__.py  cli.py  config.py  errors.py  pyproject.toml
scripts/openemr_dr/aws/: __init__.py  kms.py  rds.py  terraform_data.py  wait.py
scripts/openemr_dr/backup/: manifest.py  metadata.py  orchestrator.py
scripts/openemr_dr/common/: log.py  paths.py  shell.py
scripts/openemr_dr/e2e/: runner.py
scripts/openemr_dr/models/: restore.py  state.py
scripts/openemr_dr/restore/: aws_backup.py  bash_bridge.py  orchestrator.py
scripts/openemr_dr/restore/phases/: __init__.py  bootstrap.py  data.py  deploy.py  preflight.py  rds.py  verify.py
scripts/openemr_dr/tests/: conftest.py  test_aws_backup.py  test_aws_extended.py  test_backup_manifest.py  test_backup_orchestrator.py  test_bash_bridge.py  test_cli.py  test_coverage_gaps.py  test_e2e_runner.py  test_errors_config.py  test_kms.py  test_main.py  test_metadata.py  test_metadata_loader.py  test_orchestrator.py  test_orchestrator_cli.py  test_phases.py  test_phases_extended.py  test_preflight.py  test_rds_ops.py  test_restore_models.py  test_shell.py  test_state.py  test_terraform_data.py  test_verify_extended.py  test_verify_helpers.py  test_wait.py
(+105 files in other folders)
