[project]
name = "openemr-dr"
version = "0.1.0"
description = "Python disaster recovery orchestration for OpenEMR on EKS"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
    "bandit[toml]>=1.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".."]
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["openemr_dr"]
branch = true
omit = ["openemr_dr/tests/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["openemr_dr"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
files = ["."]
exclude = ["tests/"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["SIM117"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B404", "B603", "B607"]
